Day2/02.01-deployment-sample-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-app
  name: sample-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: sample-app
        imagePullPolicy: Always
        image: reman68/sample-app:v1.0
        ports:
        - containerPort: 4567
