Day2/04.03.ingress-manifest.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sample-app-ing
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: sample-app.52.146.31.247.nip.io
    http:
      paths:
      - backend:
          serviceName: sample-app
          servicePort: 8080
        path: /(.*)
